Ensure notifications display on top layer via z-index.

--- a/src/styles/ng-notify.css
+++ b/src/styles/ng-notify.css
@@ -15,7 +15,8 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  z-index: 9999; }
 
 .ngn-top {
   top: 0; }
